# QAP_Assignment

./: .editorconfig  .gitignore  QAP.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: QAP-checkpoint.ipynb
notebooks/: 0.01-250mhz-data-stuff.ipynb  0.02-250mhz-pymoo-exploration.ipynb  0.03-250mhz-trying-term-conds.ipynb  0.04-250mhz-try-local-search.ipynb
src/qap_assignment/: config.py  dataset.py  operators.py  problem.py
