[project]
name = "qap-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.4",
    "numba>=0.64.0",
    "pymoo[full]>=0.6.1.6",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = ["src/qap_assignment"]
